# EchoLearn

./: .env  .gitignore  DEPLOYMENT.md  MEMORY_SYSTEM.md  MIGRATION_PLAN.md  MODEL_MANAGEMENT_IMPROVEMENTS.md  OLLAMA_INTEGRATION.md  README.md  VOICE_CHAT_SYSTEM.md  build-tauri.ps1  dev-tauri.ps1  index.html  package-lock.json  package.json  replit.md  tailwind.config.ts  test-ollama.js  tsconfig.json  vercel.json  vercel.json.backup  vite.config.ts
.github/workflows/: tauri-windows-build.yml
attached_assets/: Pasted-Design-a-responsive-and-minimalistic-UI-for-an-AI-powered-English-learning-chatbot-AI-Tutor-The-a-1754342090372_1754342090373.txt
client/: index.html  package-lock.json  package.json  postcss.config.js  vite.config.ts
client/public/: webllm-widget.js
client/src/: App.tsx  index.css  sample-markdown.md
docs/: NATIVE_CPU_IMPLEMENTATION_PLAN.md
public/: webllm-config.js
scripts/: download-native-gguf-models.js  download-voice-models.js  fix-piper-wasm.js  prompt-quality-gate.json
server/: index.ts  package-lock.json  package.json  routes.ts  storage.ts
server/services/: mock-ollama.ts  ollama.ts  openai.ts
shared/: schema.ts
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  db_service.rs  embedding_service.rs  lib.rs  llm_service.rs  main.rs  native_inference.rs  rag_service.rs
src/contexts/: AuthContext.tsx
src/hooks/: use-chat-session.ts  use-chat.tsx  use-persistent-chat.ts  use-voice-chat.ts  use-voice.ts
src/lib/: api-config.ts  tour-steps.ts
src/pages/: assessment.tsx  chat-v2.tsx  chat.tsx  dashboard.tsx  journal.tsx  login.tsx  not-found.tsx  reports.tsx  settings.tsx  voice.tsx
src/services/: ai-service.ts  auth-service.ts  chat-memory-service.ts  device-memory-service.ts  device-store-service.ts  inference-runtime-service.test.ts  inference-runtime-service.ts  (+11 more)
(+32 files in other folders)
