[package]
name = "echolearn"
version = "1.0.0"
description = "EchoLearn - AI Mental Health Companion"
authors = ["EchoLearn Team"]
license = "MIT"
repository = "https://github.com/echolearn/echolearn"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "echolearn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri core with essential features
tauri = { version = "2.10", features = [ 
  "devtools"
] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# LLM inference via llama.cpp
llama-cpp-2 = "0.1.138"

# Embeddings — fastembed (Rust-native ONNX sentence embeddings)
fastembed = "5"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
dirs = "6"
anyhow = "1"
encoding_rs = "0.8"
once_cell = "1.20"

# HTTP client for GGUF model downloads
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
futures-util = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]

# Platform optimizations
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Threading"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-services = "0.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"
